// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary should match snapshot 1`] = `
<div>
  movies
</div>
`;

exports[`Footer should match snapshot 1`] = `
<footer>
  Netflixroulette
</footer>
`;

exports[`MovieItem should match snapshot 1`] = `
<div
  className="movie-item"
>
  <img
    className="movie-item__img"
    src="test"
  />
  <div
    className="movie-item__description"
  >
    <h4
      className="movie-item__title"
    >
      title
    </h4>
    <span
      className="movie-item__release-date"
    >
      2015
    </span>
  </div>
  <div
    className="movie-item__genres"
  >
    <span>
      comedy
    </span>
    <span>
      drama
    </span>
  </div>
</div>
`;

exports[`MovieNotFound should match snapshot 1`] = `
<div
  className="no-found"
>
  No films found
</div>
`;

exports[`MoviePage should match snapshot 1`] = `null`;

exports[`MoviePage should match snapshot 2`] = `null`;

exports[`MoviePage should match snapshot 3`] = `null`;

exports[`MoviesList should match snapshot 1`] = `
<div
  className="no-found"
>
  No films found
</div>
`;

exports[`MoviesList should match snapshot 2`] = `
<div
  className="movies-list"
>
  <div
    className="movies-list__header"
  >
    <span>
      2
       movies found
    </span>
    <div
      className="sortby"
    >
      <span>
        Sort by
      </span>
      <label
        className="checked"
      >
        <input
          name="sort"
          onChange={[Function]}
          type="radio"
          value="release"
        />
        <span>
          Release date
        </span>
      </label>
      <label
        className=""
      >
        <input
          name="sort"
          onChange={[Function]}
          type="radio"
          value="rating"
        />
        <span>
          rating
        </span>
      </label>
    </div>
  </div>
  <div
    className="movies-list__items"
  >
    <div
      className="movie-item"
    >
      <img
        className="movie-item__img"
        src={undefined}
      />
      <div
        className="movie-item__description"
      >
        <h4
          className="movie-item__title"
        />
        <span
          className="movie-item__release-date"
        >
          NaN
        </span>
      </div>
      <div
        className="movie-item__genres"
      />
    </div>
    <div
      className="movie-item"
    >
      <img
        className="movie-item__img"
        src={undefined}
      />
      <div
        className="movie-item__description"
      >
        <h4
          className="movie-item__title"
        />
        <span
          className="movie-item__release-date"
        >
          NaN
        </span>
      </div>
      <div
        className="movie-item__genres"
      />
    </div>
  </div>
</div>
`;

exports[`TopContainer should match snapshot call callback with proper param 1`] = `
<div
  className="top-container"
>
  <div
    className="content-wrapper"
  >
    <div
      className="content"
    >
      <div
        className="title"
      >
        Netflixroulette
      </div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="search-hint"
        >
          Find Your movie
        </div>
        <input
          className="search-input"
          name="title"
          onChange={[Function]}
          placeholder="Quentin Tarantino"
          required="required"
          type="text"
        />
        <div
          className="form-footer"
        >
          <div
            className="searchby"
          >
            <span
              className="filter-text"
            >
              Search by
            </span>
            <label
              className="checked"
            >
              <input
                name="search"
                onChange={[Function]}
                type="radio"
                value="title"
              />
              <span>
                title
              </span>
            </label>
            <label
              className=""
            >
              <input
                name="search"
                onChange={[Function]}
                type="radio"
                value="genres"
              />
              <span>
                genres
              </span>
            </label>
          </div>
          <input
            className="search-button btn"
            required="required"
            type="submit"
            value="search"
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;
